--- a/index.html
+++ b/index.html
@@ -209,9 +209,7 @@
     const outputContainer = document.getElementById('outputContainer');
     const excuseText = document.getElementById('excuseText');
     const copyBtn = document.getElementById('copyBtn');
-    const webhookUrl = 'primary-production-e431.up.railway.app
-
-/webhook/caf9c05e-7c90-4206-8a03-f69246ae1ef8; 
+    const webhookUrl = 'https://primary-production-e431.up.railway.app/webhook-test/caf9c05e-7c90-4206-8a03-f69246ae1ef8; 
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
